--- a/src/style.scss
+++ b/src/style.scss
@@ -1,471 +1,40 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 * {
-  font-family: "Montserrat";
-}
-// body {
-//   margin: 20px;
-// }
-
-.full-height {
-  height: 100vh; /* Establece la altura al 100% de la ventana */
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Poppins", sans-serif;
 }
 
-.text-column {
-  margin-right: 20px; /* Ajusta el valor según el espacio que desees entre las columnas */
-}
-.imagen {
-  width: 800px;
-}
-// .home {
-//   height: 100vh;
-//   overflow: hidden;
-//   display: flex;
-//   border: 1px solid red;
-
-//   .container {
-//     display: grid;
-//     grid-template-columns: 45% 55%;
-//     // background-color: aqua;
-//     border: 1px solid wheat;
-
-//     .info {
-//       display: flex;
-//       flex-direction: column;
-//       justify-content: center;
-//       height: 100vh;
-//       background-color: rgba(7, 7, 37, 0.402);
-//       font-family: "Montserrat";
-//       border: 1px solid aqua;
-//       margin-right: 30px;
-
-//       .descriptionMe {
-//         margin-left: auto;
-//         margin-right: auto;
-//         border: 1px solid rgb(52, 23, 167);
-//       }
-
-//       .name {
-//         border: 1px solid green;
-//         font-size: 58px;
-//         display: flex;
-//         flex-direction: column;
-
-//         p {
-//           margin: -10px;
-//         }
-//       }
-//       .role {
-//         border: 1px solid green;
-//         font-size: 24px;
-//         margin-right: 80px;
-//       }
-
-//       .description {
-//         border: 1px solid green;
-//         margin-right: 150px;
-//       }
-//       .social {
-//         border: 1px solid yellow;
-//       }
-//     }
-//     .me {
-//       height: 100vh;
-//       flex-direction: center;
-//       display: flex;
-//       justify-content: center;
-//       align-items: center;
-
-//       img {
-//         height: 65%;
-//         width: 65%;
-//       }
-//     }
-
-//     @media screen and (max-width: 1024px) {
-//       .info {
-//         grid-template-columns: 1fr;
-//         gap: 10px;
-//       }
-//     }
-
-//     /* MEDIA QUERIES (small devices) */
-//     @media screen and (max-width: 600px) {
-//       .info {
-//         grid-template-columns: 1fr;
-//       }
-//     }
-//   }
-
-.about {
-  height: 100vh;
-  overflow: hidden;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid red;
-
-  .container {
-    // border: 1px solid rgb(93, 144, 216);
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    justify-content: center;
-    align-items: center;
-    .image {
-      height: 100%;
-      width: 100%;
-      // border: 2px solid rgb(250, 250, 45);
-      align-content: center;
-
-      img {
-        height: 100%;
-        overflow: hidden;
-        border-radius: 10px;
-      }
-    }
-
-    .content {
-      .cards {
-        margin-bottom: 40px;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 5rem;
-
-        .card {
-          background: var(--color-bg-variant);
-          border: 1px solid transparent;
-          border-radius: 1rem;
-          padding: 15px;
-          text-align: center;
-          transition: var(--transition);
-          margin-bottom: 5px;
-
-          &:hover {
-            background: transparent;
-            border-color: red;
-            cursor: default;
-          }
-
-          .icon {
-            color: var(--color-primary);
-            font-size: 1.4rem;
-          }
-
-          small {
-            font-size: 0.7rem;
-            color: var(--color-light);
-          }
-        }
-      }
-      p {
-        margin-bottom: 20px;
-      }
-    }
-  }
-
-  /* MEDIA QUERIES (medium devices) */
-  // @media screen and (max-width: 1024px) {
-  //   .container {
-  //     flex-direction: column;
-  //     align-items: center;
-  //   }
-
-  //   .about__me {
-  //     width: 50%;
-  //     margin: 2rem auto 4rem;
-  //   }
-
-  //   .about__content p {
-  //     margin: 1rem 0 1.5rem;
-  //   }
-  // }
+html {
+  scroll-behavior: smooth;
 }
 
-/* MEDIA QUERIES (small devices) */
-@media screen and (max-width: 600px) {
-  .about__me {
-    width: 65%;
-    margin: 0 auto 3rem;
-  }
-
-  .about__cards {
-    grid-template-columns: 1fr 1fr;
-    gap: 1rem;
-    align-content: center;
-  }
-
-  .about__content {
-    text-align: center;
-  }
-
-  .about__content p {
-    margin: 1.5rem 0;
-  }
+body {
+  margin: 0px !important;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
-.experience__container {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 2rem;
+/* width */
+::-webkit-scrollbar {
+  width: 4px;
+  height: 80px;
 }
 
-.experience__container > div {
-  background: var(--color-bg-variant);
-  padding: 2.4rem 5rem;
-  border-radius: 2rem;
-  border: 1px solid transparent;
-  transition: var(--trainsition);
+/* Track */
+::-webkit-scrollbar-track {
+  background: #222a35;
 }
 
-.experience__container > div:hover {
-  background: transparent;
-  border-color: var(--color-primary-variant);
-  cursor: default;
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #575c66;
+  border-radius: 6px;
 }
 
-.experience__container > div h3 {
-  text-align: center;
-  margin-bottom: 2rem;
-  color: var(--color-primary);
-}
-
-.experience__content {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  row-gap: 2rem;
-}
-
-.experience__details {
-  display: flex;
-  gap: 1rem;
-}
-
-.experience__details-icon {
-  margin-top: 6px;
-  color: var(--color-primary);
-}
-
-/* MEDIA QUERIES (medium devices) */
-@media screen and (max-width: 1024px) {
-  .experience__container {
-    grid-template-columns: 1fr;
-  }
-
-  .experience__container > div {
-    width: 80%;
-    padding: 2rem;
-    margin: 0 auto;
-  }
-
-  .experience__content {
-    padding: 1rem;
-  }
-}
-
-/* MEDIA QUERIES (small devices) */
-@media screen and (max-width: 600px) {
-  .experience__container {
-    gap: 1rem;
-  }
-
-  .experience__container > div {
-    width: 100%;
-    padding: 2rem 1rem;
-  }
-}
-
-/* CTA */
-
-.cta {
-  margin-top: 2.5rem;
-  display: flex;
-  gap: 1.2rem;
-  justify-content: center;
-}
-
-/* HEADER SOCIALS */
-.header__socials {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 0.8rem;
-  position: absolute;
-  left: 0;
-  bottom: 3rem;
-}
-
-.header__socials::after {
-  content: "";
-  width: 1px;
-  height: 2rem;
-  background: var(--color-primary);
-}
-
-/* SCROLL DOWN */
-.scroll__down {
-  position: absolute;
-  right: -2.3rem;
-  bottom: 5rem;
-  transform: rotate(90deg);
-  font-weight: 300;
-  font-size: 0.9;
-}
-
-/* MEDIA QUERIES (medium devices) */
-@media screen and (max-width: 1024px) {
-  header {
-    height: 68vh;
-  }
-}
-
-/* MEDIA QUERIES (small devices) */
-@media screen and (max-width: 600px) {
-  header {
-    height: 100vh;
-  }
-  .header__socials,
-  .scroll__down {
-    display: none;
-  }
-}
-nav {
-  background: rgba(0, 0, 0, 0.3);
-  width: max-content;
-  display: block;
-  padding: 0.7rem 1.7rem;
-  z-index: 2;
-  position: fixed;
-  left: 50%;
-  transform: translateX(-50%);
-  bottom: 2rem;
-  display: flex;
-  gap: 0.8rem;
-  border-radius: 3rem;
-  backdrop-filter: blur(15px);
-  a {
-    background: transparent;
-    padding: 0.9rem;
-    border-radius: 50%;
-    display: flex;
-    color: var(--color-light);
-    font-size: 1.1rem;
-  }
-  a.active {
-    background: var(--color-bg);
-    color: var(--color-white);
-  }
-}
-
-.portfolio {
-  .container {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    gap: 2.5rem;
-
-    .item {
-      background: red;
-      padding: 1.3px;
-      border-radius: 10px;
-      border: 1px solid transparent;
-      // transition: ;
-
-      .image {
-        border-radius: 10px;
-        overflow: hidden;
-
-        // img {
-        //   width: 80%;
-        //   height: 80%;
-        // }
-      }
-      .buttons {
-        display: flex;
-        gap: 10px;
-      }
-    }
-    .item:hover {
-      border-color: aqua;
-      background: transparent;
-    }
-  }
-
-  /* MEDIA QUERIES (medium devices) */
-  @media screen and (max-width: 1024px) {
-    .container {
-      grid-template-columns: 1fr;
-      gap: 10px;
-    }
-  }
-
-  /* MEDIA QUERIES (small devices) */
-  @media screen and (max-width: 600px) {
-    .container {
-      grid-template-columns: 1fr;
-    }
-  }
-}
-
-.footer {
-  margin: 0px;
-
-  background-color: rgb(11, 40, 30);
-
-  .container {
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    padding: 4px 4px;
-
-    .links {
-      display: flex;
-      justify-content: space-between;
-      align-items: flex-start;
-      flex-direction: row;
-      flex-wrap: wrap;
-      width: 100%;
-      text-align: left;
-
-      .link {
-        display: flex;
-        justify-content: flex-start;
-        flex-direction: column;
-        color: white;
-        a {
-          color: gray;
-          text-decoration: none;
-        }
-      }
-    }
-
-    .copyright {
-      display: flex;
-      flex-direction: row;
-      p {
-        color: gray;
-      }
-    }
-  }
-
-  /* MEDIA QUERIES (medium devices) */
-  @media screen and (max-width: 1024px) {
-    .container {
-      width: 100%;
-
-      grid-template-columns: 1fr;
-      gap: 10px;
-    }
-  }
-
-  /* MEDIA QUERIES (small devices) */
-  @media screen and (max-width: 600px) {
-    .copyright {
-      width: 100%;
-      flex-direction: column;
-      justify-content: left;
-    }
-  }
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #626970;
 }
